[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/dialog/Dialogo.gd" type="Script" id=1]
[ext_resource path="res://Assets/Visual/botones/dialogb.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 400, 256 )
modulate_color = Color( 1, 1, 1, 0.631373 )

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.00537, 1 )
script = ExtResource( 1 )

[node name="Character" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -356.833
margin_top = -674.0
margin_right = 143.167
margin_bottom = -174.0
rect_scale = Vector2( 0.5, 0.5 )
stretch_mode = 6

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 210.0
custom_constants/margin_right = 40
custom_constants/margin_top = 30
custom_constants/margin_left = 40
custom_constants/margin_bottom = 30

[node name="TextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 30.0
margin_right = 984.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )

[node name="CharTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="CharTimer" to="." method="_on_CharTimer_timeout"]
